--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,23 +19,24 @@ dependencies:
   flutter:
     sdk: flutter
   intl: any
-  provider: ^2.0.0
+  provider: ^6.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  flare_flutter: ^1.8.3
-  auto_size_text: ^1.1.2
+  cupertino_icons: ^1.0.4
+  flare_flutter: ^3.0.2
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_driver:
     sdk: flutter
-  logging: ^0.11.3+2
-  git: ^0.5.1+1
-  t_stats: ^2.0.0
-  test: ^1.6.1
+  logging: ^1.0.2
+  git: ^2.0.0
+  t_stats: ^3.0.0
+  test: ^1.19.3
+  test_api: ^0.4.2
 
 
 # For information on the generic Dart part of this file, see the
