--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: any
-  provider: ^6.0.1
+  intl: ^0.17.0
+  provider: ^6.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.4
+  cupertino_icons: ^1.0.5
   flare_flutter: ^3.0.2
   auto_size_text: ^3.0.0
 
@@ -32,11 +32,11 @@ dev_dependencies:
     sdk: flutter
   flutter_driver:
     sdk: flutter
-  logging: ^1.0.2
-  git: ^2.0.0
+  logging: ^1.1.0
+  git: ^2.2.0
   t_stats: ^3.0.0
-  test: ^1.19.3
-  test_api: ^0.4.2
+  test: ^1.21.4
+  test_api: ^0.4.12
 
 
 # For information on the generic Dart part of this file, see the
